# open-ouroboros

./: CLAUDE.md  README.md
ouroboros/: ARCHITECTURE.md  AUTO_SEARCH_FEATURE_SUMMARY.md  AUTO_SEARCH_FLOW.md  AUTO_SEARCH_SUMMARY.md  AUTO_SEARCH_TEST_REPORT.md  AUTO_SEARCH_TEST_RESULTS.md  CONTEXT_FORK_JOIN_QUICK_REFERENCE.md  CONTEXT_FORK_JOIN_TEST_REPORT.md  CONTEXT_FORK_JOIN_TEST_SUMMARY.md  Cargo.toml  DOCUMENT_STORE_TEST_REPORT.md  KEYWORD_SEARCH_TEST_GUIDE.md  KEYWORD_SEARCH_TEST_REPORT.md  KEYWORD_SEARCH_TEST_SUMMARY_KR.md  KNOWLEDGE_SYSTEM_REVIEW.md  QUICK_TEST_REFERENCE.md  README.md  SESSION_UPDATE_QUICK_REFERENCE.md  SESSION_UPDATE_TESTING_GUIDE.md  SESSION_UPDATE_TEST_FINAL_SUMMARY.txt  SESSION_UPDATE_TEST_REPORT.md  SESSION_UPDATE_TEST_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  WORK_SESSION_LIFECYCLE_TESTS.md  manual_session_update_test.sh  run_all_tests.sh  search_evaluation_report.md  session_update_test_results.txt  test_execution_output.txt  test_execution_summary.txt  test_search_cli.sh
ouroboros-kg/: Cargo.toml  HEALTH_CHECK_VALIDATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SCHEMA_IMPLEMENTATION.md  TESTING_GUIDE.md  TEST_RESULTS.md  task-001-result.md  test_health_check.sh
ouroboros-kg/docs/: cache-implementation.md  caching-research.md
ouroboros-kg/examples/: health_check_demo.rs  manual_health_check.rs  schema_demo.rs
ouroboros-kg/src/: connection.rs  error.rs  lib.rs
ouroboros-kg/src/cache/: config.rs  entry.rs  integration.rs  invalidation.rs  mod.rs  store.rs  types.rs
ouroboros-kg/src/schema/: context.rs  knowledge.rs  mod.rs  relationships.rs  result.rs  task.rs  types.rs
ouroboros-kg/tests/: cache_integration_tests.rs  health_check_failures.rs  health_check_test.rs
ouroboros/data/: context-tree.json  dag.json
ouroboros/data/contexts/: plan-09789aa8.md
ouroboros/data/results/: task-001-result.md  task-002-result.md  task-003-result.md  task-004-result.md
ouroboros/data/tasks/: task-001.md  task-002.md  task-003.md  task-004.md
ouroboros/docs/: CONTEXT_TREE.md  search-usage-scenario.md
ouroboros/examples/: demo_auto_search.rs  test_search_populate.rs
ouroboros/src/: lib.rs  main.rs  orchestrator.rs  session.rs  work_session.rs
ouroboros/src/api/: auth.rs  middleware.rs  mod.rs  routes.rs  server.rs
ouroboros/tests/: api_integration_test.rs  auto_search_test.rs  context_fork_join_test.rs  document_store_test.rs  keyword_search_test.rs  search_indexing_test.rs  session_update_test.rs  work_session_lifecycle_test.rs
(+47 files in other folders)
