[package]
name = "ouroboros-kg"
version = "0.1.0"
edition = "2021"

[dependencies]
# Neo4j driver
neo4rs = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Random number generation (for cache jitter)
rand = "0.8"

[dev-dependencies]
# Testing
tokio-test = "0.4"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["neo4j"] }
futures = "0.3"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }
