[package]
name = "ouroboros"
version = "0.1.0"
edition = "2021"
description = "LLM Agent Orchestration System"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
petgraph = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dirs = "5"

[dev-dependencies]
tempfile = "3"
