[package]
name = "ouroboros"
version = "0.1.0"
edition = "2021"
description = "LLM Agent Orchestration System"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
petgraph = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dirs = "5"

# Search dependencies (BM25 keyword search)
tantivy = "0.25"

# Web server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# JWT dependencies
jsonwebtoken = "9"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
